--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,19 @@
-<h1> Test Page </h1>
+<!DOCTYPE HTML> 
+
+<script src="scripts/functions.js"></script>
+
+<html> 
+	<head> 
+		<title>Sign-In</title> 
+		<link rel="stylesheet" type="text/css" href="css/login.css"> 
+	</head> 
+	<h2>Road Trip Buddy Sign-In</h2>
+	<body id="body-color"> 
+		<div class="login">
+			<input type="text" placeholder="Username" id="username">
+			<input type="password" placeholder="Password" id="password">
+			<input type="submit" value="Sign In" onclick="login()">
+			<input type="submit" value="Create Account" onclick="location.href='http://flip3.engr.oregonstate.edu:9477/signup';">
+		</div>
+ 	</body> 
+</html> 
